--- a/places.css
+++ b/places.css
@@ -44,9 +44,6 @@ body, h1, h2, p, ul, li, form, label, input, textarea, footer {
     text-decoration: underline;
   }
   
-  main {
-    /* padding: 10px; */
-  }
   
   section {
     margin-bottom: 10px;
@@ -80,15 +77,10 @@ body, h1, h2, p, ul, li, form, label, input, textarea, footer {
   }
 
 
-  /* .address2 {
-    width:40%
-  } */
-
   .fetch-data {
     position:relative;
     height:30%;
     width:100%;
-
     
   }
 
@@ -105,6 +97,10 @@ body, h1, h2, p, ul, li, form, label, input, textarea, footer {
     display: flex;
     justify-content: center; /* Horizontally centers items */
     align-items: center;  /* Vertically centers items */
+    cursor:pointer;
+    :hover {
+      cursor: pointer;
+    }
     
   }
 
@@ -116,8 +112,9 @@ button {
     border-radius: 10px;
     cursor: pointer;
     font-weight: bold;
-    &:hover{
+    :hover{
       background-color: #D81B60; /* Darker pink */
+      cursor: pointer;
     }
   }
   
